--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Louis-Pascal A. C. Xhonneux, PhD Student</title>
+	  <title>Louis-Pascal A. C. Xhonneux, PhD Student</title>
+      <!-- link to main stylesheet -->
+      <link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
