Add new pages, still under construction

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Louis-Pascal A. C. Xhonneux</title>
+		<title>LP's blog</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -17,8 +17,8 @@
 		</nav>
 		<div class="container">
 			<div class="blurb">
-				<h1>Hello World!</h1>
-				<p>Under construction.</p>
+				<h1>Blogposts</h1>
+				<p>A project for the future.</p>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
