--- a/papers.html
+++ b/papers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Louis-Pascal A. C. Xhonneux</title>
+		<title>Publications</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -11,13 +11,13 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="/interest.html">Research Interest</a></li>
 			<li><a href="/cv.html">CV</a></li>
-			<li><a href="/papers.html">Publications</a></li>
+			<li><a href="/papers.html">Papers</a></li>
 			<li><a href="/blog.html">Blog</a></li>
 			</ul>
 		</nav>
 		<div class="container">
 			<div class="blurb">
-				<h1>Hello World!</h1>
+				<h1>Publications</h1>
 				<p>Under construction.</p>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
