--- a/cv.html
+++ b/cv.html
@@ -9,9 +9,9 @@
 		<nav>
 			<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/interest.html">Research Interest</a></li>
+			<li><a href="/research_interest.html">Research Interest</a></li>
 			<li><a href="/cv.html">CV</a></li>
-			<li><a href="/papers.html">Papers</a></li>
+			<li><a href="/publications.html">Publications</a></li>
 			<li><a href="/blog.html">Blog</a></li>
 			</ul>
 		</nav>
