--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Research Interests</title>
+		<title>Publications</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -9,15 +9,15 @@
 		<nav>
 			<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/interest.html">Research Interest</a></li>
+			<li><a href="/research_interest.html">Research Interest</a></li>
 			<li><a href="/cv.html">CV</a></li>
-			<li><a href="/papers.html">Papers</a></li>
+			<li><a href="/publications.html">Publications</a></li>
 			<li><a href="/blog.html">Blog</a></li>
 			</ul>
 		</nav>
 		<div class="container">
 			<div class="blurb">
-				<h1>Research Interests</h1>
+				<h1>Publications</h1>
 				<p>Under construction.</p>
 			</div><!-- /.blurb -->
 		</div><!-- /.container -->
